2016.04.02 Kentaro Fukuchi <kentaro@fukuchi.org>
	* tests/common.h:
	  - Code refactoring.
	  - New debug functions have been added.

2016.03.30 Kentaro Fukuchi <kentaro@fukuchi.org>
	* bitstream.[ch], tests/test_bitstream.c:
	  - Added new function BitStream_newWithBits() and tests for it.
	* tests/decoder.[ch], tests/test_monkey.c:
	  - Code refactoring.

2016.03.29 Kentaro Fukuchi <kentaro@fukuchi.org>
	* tests/view_qrcode.c:
	  - Added mask=-2 mode for debug purpose.
	* bitstream.c, qrencode.c:
	  - Incorrect bit padding has been fixed. (Thanks to Yuji Ueno)
	* tests/test_bitstream.c, tests/test_qrencode.c:
	  - Incorrect bit padding has been fixed.
	* README:
	  - ACKNOWLEDGMENTS has been updated.
	* README.md:
	  - ACKNOWLEDGMENTS has been updated.
	  - Some missed contributors have been added to README.md.

2016.02.21 Kentaro Fukuchi <kentaro@fukuchi.org>
	* configure.ac, tests/common.h, tests/view_qrcode.c:
	  - Migrated from SDL 1.2 to 2.0.
	* README, README.md:
	  - Improved the install instruction. (Thanks to Ronald Michaels)

2015.11.04 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrspec.h, mqrspec.h:
	  - Typo fix. (Thanks to @qianchenglenger)
	* qrenc.c:
	  - Merged pull-request #74. (Thanks to @mgorny)
	  - Added support for UTF8i and ANSIUTF8i formats that provide reverse
	    mappings of UTF8 and ANSIUTF8 formats respective. This is useful for
		black-on-white media.
	* configure.ac, Makefile.am, qrenc.c, rsecc.c:
	  - Added new configure option "--without-png". (closes #70)

2015.05.13 Kentaro Fukuchi <kentaro@fukuchi.org>
	* mqrspec.c:
	  - Typo fix.
	* README, README.md:
	  - Text format improved.
	* NEWS:
	  - Slightly updated.

2015.05.06 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c:
	  - New option "--svg-path" has been added, that uses a single path
	    instead of multiple rectangles to draw the modules.
		(cherry-picked from #41) (Thanks to @Oblomov)
	* tests/test_qrenc.sh, tests/test_images/.gitignore: